# Itabashi-AI

./: .env.template  .gitignore  CODEX.md  Glyph-initial-prompt.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
docs/: Codex-report_20250910.md
etl/: ingest_minutes.py  ingest_opendata.py  rebuild_index.py
mcp/: __init__.py  server.py
mcp/config/: policy_map.yml  topics.yml
mcp/tools/: __init__.py  geo.py  minutes.py  policy.py  report.py  stats.py  topics.py  trends.py  viz.py
orchestrator/: __init__.py  guards.py  planner.py  renderers.py  router.py
ui/: README.md
