[tool.poetry]
name = "itabashi-ai"
version = "0.1.0"
description = "Itabashi AI: Knowledge OS for Itabashi Ward"
authors = ["Jouta Nakatsuma <your_email@example.com>"]
readme = "README.md"
packages = [
  { include = "mcp" },
  { include = "orchestrator" },
  { include = "etl" }
]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.0"
uvicorn = {version = "^0.30.0", extras = ["standard"]}
psycopg = {version = "^3.1.18", extras = ["binary"]}
pgvector = "^0.2.5"
pandas = "^2.2.2"
duckdb = "^1.0.0"
PyYAML = "^6.0.2"
openai = "^1.44.0"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
jinja2 = "^3.1.4"
rich = "^13.7.1"
typer = "^0.12.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.5.5"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

